--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,9 +18,10 @@ AllCops:
   Exclude:
   - "vendor/**/*"
   - "db/schema.rb"
-  RunRailsCops: false
-  DisplayCopNames: false
+  DisplayCopNames: true
   StyleGuideCopsOnly: false
+  Rails:
+    Enabled: true
 Style/AccessModifierIndentation:
   Description: Check indentation of private/protected visibility modifiers.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#indent-public-private-protected
@@ -434,14 +435,6 @@ Style/TrailingBlankLines:
   SupportedStyles:
   - final_newline
   - final_blank_line
-Style/TrailingComma:
-  Description: Checks for trailing comma in parameter lists and literals.
-  StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-trailing-array-commas
-  Enabled: false
-  EnforcedStyleForMultiline: no_comma
-  SupportedStyles:
-  - comma
-  - no_comma
 Style/TrivialAccessors:
   Description: Prefer attr_* methods to trivial readers/writers.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#attr_family
